--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "derbisauth",
         "derbistoken",
         "elleşme",
+        "generaluser",
         "getposts",
         "işlemi",
         "karakterdern",
