--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,11 @@
         "Çalışıyorum",
         "değil",
         "deneme",
+        "Derbis",
         "derbisauth",
+        "derbispassword",
         "derbistoken",
+        "derbisusername",
         "elleşme",
         "generaluser",
         "getposts",
